# Geometry-Dash-Structure-Search

./: .gitignore  .gitmodules  CMakeLists.txt  GJGameLevel.h  Parser.h  README.md  levels.txt  main.cpp  settings.csv  settings.h  structure search.sln  structure search.vcxproj  structure search.vcxproj.filters  structure.h  structure.txt  util.h
includes/: Gzip.hpp  Parser.h  base64.h  settings.h  structure.h  util.h
lib/: GDCrypto.lib  zlibstatic.lib
lib/Include/: GDCrypto.hpp
lib/Include/GDCrypto/: Keys.hpp  Salts.hpp
src/: Gzip.cpp  base64.cpp  main.cpp
